HTML-escape diagnostic description before showing it in a tooltip

The tooltip displays rich-text, and thus we have to escape contents
before displaying them. This was done already for the main problem's
description, but was missed so far for the sub-diagnostics.

BUG: 376419